# week14-15_mlops_foundations

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: sample_request.json
models/: metadata.json
scripts/: train_baseline_model.py
src/financial_mlops/: monitoring.py  service.py
tests/: test_api.py  test_features.py  test_model.py
